--- a/devicelife-api/build.gradle
+++ b/devicelife-api/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	//testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15"
+    implementation "net.dv8tion:JDA:5.0.0-beta.24"
+
 }
 
 tasks.named('test') {
