디버깅 전 커밋

--- a/devicelife-api/src/main/resources/application.yaml
+++ b/devicelife-api/src/main/resources/application.yaml
@@ -18,6 +18,12 @@ spring:
   flyway:
     enabled: true
 
+jwt:
+  token:
+    secretKey: ${JWT_SECRET_KEY}
+    expiration:
+      access: 14400000
+
 server:
   port: 8080
 
