[CI] 깃허브 액션 스크립트 작성 (+ 도커 컴포즈 파일 살짝 수정)

--- a/devicelife-api/docker-compose.yml
+++ b/devicelife-api/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   api:
     container_name: api
-    build: .
+    image: ${ECR_REGISTRY}/${ECR_REPOSITORY}:develop-latest
     env_file:
       - .env
     ports:
