--- a/devicelife-api/src/main/resources/application.yaml
+++ b/devicelife-api/src/main/resources/application.yaml
@@ -40,7 +40,7 @@ jwt:
   token:
     secretKey: ${JWT_SECRET_KEY}
     expiration:
-      access: 14400000 # 4시간
+      access: 86400000 # 14400000 # PM님의 요청으로 데모데이 전까지만 토큰 기한 24시간으로 설정 (기존 4시간)
       refresh: 1209600000 # 14일
 
 server:
