[Feat] 코드인증 비밀번호 리셋 기능 개발

--- a/devicelife-api/src/main/resources/application.yaml
+++ b/devicelife-api/src/main/resources/application.yaml
@@ -39,8 +39,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: devicetest@gmail.com
-    password: "kyhv cxrm huly gjly"
+    username: chelsea4570@gmail.com
+    password: kyhvcxrmhulygjly
     properties:
       mail:
         smtp:
