--- a/devicelife-api/build.gradle
+++ b/devicelife-api/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
 
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-sqs:3.1.0'
 }
 
 tasks.named('test') {
