feat: implement currency conversion feature with exchange rate API integration

--- a/devicelife-api/src/main/resources/application.yaml
+++ b/devicelife-api/src/main/resources/application.yaml
@@ -83,3 +83,8 @@ discord:
   guild-id: ${DISCORD_GUILD_ID:}
   admin-role-name: ${DISCORD_ADMIN_ROLE:admin}
 
+currency:
+  exchange-rate-api:
+    key: ${EXCHANGE_RATE_API_KEY:}
+    url: https://v6.exchangerate-api.com/v6
+
