--- a/devicelife-api/src/main/resources/application.yaml
+++ b/devicelife-api/src/main/resources/application.yaml
@@ -96,3 +96,4 @@ logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.security.oauth2: DEBUG
+    org.springframework.web: INFO
