[Chore] 토큰 기한 원상복구

--- a/devicelife-api/src/main/resources/application.yaml
+++ b/devicelife-api/src/main/resources/application.yaml
@@ -66,8 +66,8 @@ jwt:
   token:
     secretKey: ${JWT_SECRET_KEY}
     expiration:
-      access: 60000 #864000 # 14400000 # PM님의 요청으로 데모데이 전까지만 토큰 기한 24시간으로 설정 (기존 4시간)
-      refresh: 180000 #2592000000 # 30일
+      access: 86400000 # 14400000 # PM님의 요청으로 데모데이 전까지만 토큰 기한 24시간으로 설정 (기존 4시간)
+      refresh: 2592000000 # 30일
 
 server:
   port: 8080
